feat: update experience of competition

--- a/en/index.html
+++ b/en/index.html
@@ -225,11 +225,29 @@
                 <summary class="enw1">2025</summary>
                 <ul>
                     <li>
+                        <span class="title enw1">2025 National Collegiate Programming Contest</span>
+                        <br>
+                        <span class="description enw2">National Sun Yat-sen University</span>
+                        <br>
+                        <span class="description enw2">41st / 127 (Solved: 3 / 12)</span>
+                        <br>
+                        <span class="time enw2">Oct 12, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">Collegiate Programming Examination</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">61st / 2477 (Solved: 4 / 7)</span>
+                        <br>
+                        <span class="time enw2">Sep 30, 2025</span>
+                    </li>
+                    <li>
                         <span class="title enw1">The 2025 ICPC Asia Taiwan Online Programming Contest</span>
                         <br>
                         <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
                         <br>
-                        <span class="description enw2">108th / 226 (Solved: 3 / 12)</span>
+                        <span class="description enw2">Bronze Medal, 108th / 226 (Solved: 3 / 12)</span>
                         <br>
                         <span class="time enw2">Sep 20, 2025</span>
                     </li>
@@ -238,7 +256,7 @@
                         <br>
                         <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
                         <br>
-                        <span class="description enw2">98 th / 2515 (Solved: 4 / 7)</span>
+                        <span class="description enw2">98th / 2515 (Solved: 4 / 7)</span>
                         <br>
                         <span class="time enw2">May 20, 2025</span>
                     </li>
@@ -247,7 +265,7 @@
                         <br>
                         <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
                         <br>
-                        <span class="description enw2">71 st / 2729 (Solved: 4 / 7)</span>
+                        <span class="description enw2">71st / 2729 (Solved: 4 / 7)</span>
                         <br>
                         <span class="time enw2">Mar 25, 2025</span>
                     </li>
@@ -256,7 +274,7 @@
                         <br>
                         <span class="description enw2">picoCTF</span>
                         <br>
-                        <span class="description enw2">1592 th / 10460 (Score: 1710 / 8510)</span>
+                        <span class="description enw2">1592th / 10460 (Score: 1710 / 8510)</span>
                         <br>
                         <span class="time enw2">Mar 08 - 18, 2025</span>
                     </li>
@@ -270,7 +288,7 @@
                         <br>
                         <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
                         <br>
-                        <span class="description enw2">109 th / 2446 (Solved: 3 / 7)</span>
+                        <span class="description enw2">109th / 2446 (Solved: 3 / 7)</span>
                         <br>
                         <span class="time enw2">Dec 10, 2024</span>
                     </li>
@@ -279,7 +297,7 @@
                         <br>
                         <span class="description enw2">Department of Computer Science, University of Taipei</span>
                         <br>
-                        <span class="description enw2">8 th</span>
+                        <span class="description enw2">8th</span>
                         <br>
                         <span class="time enw2">Nov 17, 2024</span>
                     </li>
@@ -288,7 +306,7 @@
                         <br>
                         <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
                         <br>
-                        <span class="description enw2">141 st / 2586 (Solved: 3 / 7)</span>
+                        <span class="description enw2">141st / 2586 (Solved: 3 / 7)</span>
                         <br>
                         <span class="time enw2">Oct 15, 2024</span>
                     </li>
@@ -297,7 +315,7 @@
                         <br>
                         <span class="description enw2">picoCTF</span>
                         <br>
-                        <span class="description enw2">870 th / 11517 (Score: 3025 / 9225)</span>
+                        <span class="description enw2">870th / 11517 (Score: 3025 / 9225)</span>
                         <br>
                         <span class="time enw2">Mar 13 - 27, 2024</span>
                     </li>
