--- a/index.html
+++ b/index.html
@@ -223,11 +223,29 @@
                 <summary class="zhwb">2025</summary>
                 <ul>
                     <li>
+                        <span class="title zhwb">114 年度全國大專校院電腦軟體設計競賽</span>
+                        <br>
+                        <span class="description zhw">國立中山大學</span>
+                        <br>
+                        <span class="description zhw">41st / 127 (Solved: 3 / 12)</span>
+                        <br>
+                        <span class="time zhw">Oct 12, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">大學程式能力檢定 (CPE)</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">61st / 2477 (Solved: 4 / 7)</span>
+                        <br>
+                        <span class="time zhw">Sep 30, 2025</span>
+                    </li>
+                    <li>
                         <span class="title zhwb">The 2025 ICPC Asia Taiwan Online Programming Contest</span>
                         <br>
                         <span class="description zhw">臺灣程式競賽暨檢定學會</span>
                         <br>
-                        <span class="description zhw">108th / 226 (Solved: 3 / 12)</span>
+                        <span class="description zhw">Bronze Medal, 108th / 226 (Solved: 3 / 12)</span>
                         <br>
                         <span class="time zhw">Sep 20, 2025</span>
                     </li>
@@ -245,7 +263,7 @@
                         <br>
                         <span class="description zhw">臺灣程式競賽暨檢定學會</span>
                         <br>
-                        <span class="description zhw">98 th / 2515 (Solved: 4 / 7)</span>
+                        <span class="description zhw">98th / 2515 (Solved: 4 / 7)</span>
                         <br>
                         <span class="time zhw">May 20, 2025</span>
                     </li>
@@ -263,7 +281,7 @@
                         <br>
                         <span class="description zhw">臺灣程式競賽暨檢定學會</span>
                         <br>
-                        <span class="description zhw">71 st / 2729 (Solved: 4 / 7)</span>
+                        <span class="description zhw">71st / 2729 (Solved: 4 / 7)</span>
                         <br>
                         <span class="time zhw">Mar 25, 2025</span>
                     </li>
@@ -272,7 +290,7 @@
                         <br>
                         <span class="description zhw">picoCTF</span>
                         <br>
-                        <span class="description zhw">1592 th / 10460 (Score: 1710 / 8510)</span>
+                        <span class="description zhw">1592th / 10460 (Score: 1710 / 8510)</span>
                         <br>
                         <span class="time zhw">Mar 08 - 18, 2025</span>
                     </li>
@@ -286,7 +304,7 @@
                         <br>
                         <span class="description zhw">臺灣程式競賽暨檢定學會</span>
                         <br>
-                        <span class="description zhw">109 th / 2446 (Solved: 3 / 7)</span>
+                        <span class="description zhw">109th / 2446 (Solved: 3 / 7)</span>
                         <br>
                         <span class="time zhw">Dec 10, 2024</span>
                     </li>
@@ -304,7 +322,7 @@
                         <br>
                         <span class="description zhw">臺灣程式競賽暨檢定學會</span>
                         <br>
-                        <span class="description zhw">141 st / 2586 (Solved: 3 / 7)</span>
+                        <span class="description zhw">141st / 2586 (Solved: 3 / 7)</span>
                         <br>
                         <span class="time zhw">Oct 15, 2024</span>
                     </li>
@@ -331,7 +349,7 @@
                         <br>
                         <span class="description zhw">picoCTF</span>
                         <br>
-                        <span class="description zhw">870 th / 11517 (Score: 3025 / 9225)</span>
+                        <span class="description zhw">870th / 11517 (Score: 3025 / 9225)</span>
                         <br>
                         <span class="time zhw">Mar 13 - 27, 2024</span>
                     </li>
@@ -340,7 +358,7 @@
                         <br>
                         <span class="description zhw">國立臺灣師範大學資訊工程學系 TOI 工作小組</span>
                         <br>
-                        <span class="description zhw">125 th / 460 (Score: 100 / 500)</span>
+                        <span class="description zhw">125th / 460 (Score: 100 / 500)</span>
                         <br>
                         <span class="time zhw">Mar 10, 2024</span>
                     </li>
@@ -354,7 +372,7 @@
                         <br>
                         <span class="description zhw">臺北市立建國高級中學資訊科教學團隊</span>
                         <br>
-                        <span class="description zhw">初賽佳作, 21 st / 89 (Score: 238 / 500)</span>
+                        <span class="description zhw">初賽佳作, 21st / 89 (Score: 238 / 500)</span>
                         <br>
                         <span class="time zhw">Sep 12, 2023</span>
                     </li>
