fix: my name and copyright

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>404 Not Found</title>
+    <title>404 Not Found | BlueBoy</title>
     <!-- meta tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,9 +62,9 @@
     </main>
     <footer>
         <p class="enw2" id="siterights">
-            Copyright © 2023-2025
+            Copyright © 2023
             <a href="https://github.com/BlueBoy247/blueboy247.github.io/" target="_blank">
-                BlueBoy247
+                BlueBoy
             </a>
             All Rights Reserved
         </p>
