--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Allen Chang</title>
+    <title>BlueBoy</title>
     <!-- meta tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -38,7 +38,7 @@
 <body>
     <header>
         <a class="enw3" id="shead" href="/en/">
-            <h1>Allen Chang</h1>
+            <h1>BlueBoy</h1>
         </a>
         <a id="menu">
             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -83,7 +83,8 @@
         </div>
 
         <div class="content">
-            <h2 class="enw2" id="intro">Allen Chang (Yu-Lun Chang)</h2>
+            <h2 class="enw2" id="intro">BlueBoy</h2>
+            <p class="enw2">Yu-Lun Chang / Allen Chang</p>
             <hr>
             <p class="enw2">An undergraduate living in the Republic of China, the country that is also known as Taiwan.</p>
             <p class="enw2">I'm now striving to excel in full-stack development. Additionally, I have a keen interest in IoT, AI, and cybersecurity technologies.</p>
@@ -468,9 +469,9 @@
     
     <footer>
         <p class="enw2" id="siterights">
-            Copyright © 2023-2025
+            Copyright © 2023
             <a href="https://github.com/BlueBoy247/blueboy247.github.io/" target="_blank">
-                BlueBoy247
+                BlueBoy
             </a>
             All Rights Reserved
         </p>
