--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
 <head>
-    <title>Allen Chang</title>
+    <title>BlueBoy</title>
     <!-- meta tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +34,7 @@
 <body>
     <header>
         <a class="enw3" id="shead" href="/">
-            <h1>Allen Chang</h1>
+            <h1>BlueBoy</h1>
         </a>
         <a id="menu">
             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +80,8 @@
         </div>
 
         <div class="content">
-            <h2 class="zhw" id="intro">Allen Chang (張育綸)</h2>
+            <h2 class="zhw" id="intro">BlueBoy</h2>
+            <p class="zhw">張育綸 / Allen Chang</p>
             <hr>
             <p class="zhw">一名正在努力不爆肝的大學生。</p>
             <p class="zhw">目前正在朝全端開發努力，此外也對物聯網、人工智慧及資安等領域有興趣。</p>
@@ -533,9 +534,9 @@
 
     <footer>
         <p class="enw2" id="siterights">
-            Copyright © 2023-2025
+            Copyright © 2023
             <a href="https://github.com/BlueBoy247/blueboy247.github.io/" target="_blank">
-                BlueBoy247
+                BlueBoy
             </a>
             All Rights Reserved
         </p>
