--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Projects | Allen Chang</title>
+    <title>Projects | BlueBoy</title>
     <!-- meta tag -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
 <body>
     <header>
         <a class="enw3" id="shead" href="/en/">
-            <h1>Allen Chang</h1>
+            <h1>BlueBoy</h1>
         </a>
         <a id="menu">
             <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -168,9 +168,9 @@
     </main>
     <footer>
         <p class="enw2" id="siterights">
-            Copyright © 2023-2025
+            Copyright © 2023
             <a href="https://github.com/BlueBoy247/blueboy247.github.io/" target="_blank">
-                BlueBoy247
+                BlueBoy
             </a>
             All Rights Reserved
         </p>
