--- a/en/index.html
+++ b/en/index.html
@@ -64,7 +64,7 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="enw3">BlueBoy247</span>
+                <span class="enw3">Home</span>
             </p>
         </div>
 
