--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -33,6 +33,7 @@
      crossorigin="anonymous"></script>
     <!-- other source -->
     <link rel="stylesheet" href="/styles/projects.css">
+    <link rel="stylesheet" href="/styles/subnav.css">
 </head>
 <body>
     <header>
@@ -64,14 +65,16 @@
                 <span class="enw3">Projects</span>
             </p>
         </div>
-        <div id="choose">
-            <select class="enw2" id="choosetype">
-                <option value="all" selected>All</option>
-                <option value="personal">Personal</option>
-                <option value="infor35th">@INFOR 35th</option>
-                <option value="utsa">@IT Division, University of Taipei Student Association</option>
-                <option value="utsys">@Computer and Network Center, University of Taipei</option>
-            </select>
+        <div class="subnav">
+            <button class="enw2" onclick="projectFilter('all')">All</button>
+            <button class="enw2" onclick="projectFilter('personal')">Personal Project</button>
+            <button class="enw2" onclick="projectFilter('course')">Course Project</button>
+            <button class="enw2" onclick="projectFilter('competition')">Competition Project</button>
+            <button class="enw2" onclick="projectFilter('infor35th')">@INFOR 35th</button>
+            <button class="enw2" onclick="projectFilter('utsa')">@IT Division, University of Taipei Student Association</button>
+            <button class="enw2" onclick="projectFilter('utsys')">@Computer and Network Center, University of Taipei</button>
+            <button class="enw2" onclick="projectFilter('utcssys')">@Department of Computer Science, University of Taipei</button>
+            <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
         <div id="projectc">
             <a href="https://carbon-diary.utaipei.edu.tw/" target="_blank" class="problock utsys">
@@ -175,27 +178,6 @@
             All Rights Reserved
         </p>
     </footer>
-    <script>
-        document.getElementById('choosetype').addEventListener('change',function(){
-            let type = document.getElementById('choosetype').value;
-            if(type != 'all'){
-                let typeblock = document.getElementsByClassName(type);
-                let allblock = document.getElementsByClassName('problock');
-                for(let block of allblock){
-                    block.style.display = 'none';
-                }
-                for(let block of typeblock){
-                    block.removeAttribute('style');
-                }
-            }
-            else{
-                let allblock = document.getElementsByClassName('problock');
-                for(let block of allblock){
-                    block.removeAttribute('style');
-                }
-            }
-        })
-    </script>
     <div id="backtotop">
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="#005048" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
             <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
