--- a/en/index.html
+++ b/en/index.html
@@ -33,6 +33,7 @@
      crossorigin="anonymous"></script>
     <!-- other source -->
     <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/styles/subnav.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
 </head>
 <body>
@@ -90,8 +91,8 @@
             <p class="enw2">I'm now striving to excel in full-stack development. Additionally, I have a keen interest in IoT, AI, and cybersecurity technologies.</p>
             <p class="enw2">My hobbies include playing piano, playing badminton, listening to music,  watching animes, reading light novels, and watching Virtual YouTubers streamings. I love the ACGN culture, and my favorite VTuber is Oozora Subaru from hololive.</p>
             <h3 class="enw2" id="education">Education</h3>
-            <div class="items">
                 <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=en" target="_blank">
+            <div class="scrollitems">
                     <picture>
                         <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
                         <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
