--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </script>
     <!-- other source -->
     <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="/styles/subnav.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
 </head>
 <body>
@@ -88,8 +89,8 @@
             <p class="zhw">興趣有彈鋼琴、打羽球、聽音樂、看動漫、看輕小說、看 VTuber 直播，喜歡日本二次元文化，VTuber 主推 hololive 的大空スバル。</p>
             
             <h3 class="zhw" id="education">學歷</h3>
-            <div class="items">
                 <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=zh-tw" target="_blank">
+            <div class="scrollitems">
                     <picture>
                         <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
                         <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
