feat: utaipei experience popup

--- a/en/index.html
+++ b/en/index.html
@@ -91,8 +91,8 @@
             <p class="enw2">I'm now striving to excel in full-stack development. Additionally, I have a keen interest in IoT, AI, and cybersecurity technologies.</p>
             <p class="enw2">My hobbies include playing piano, playing badminton, listening to music,  watching animes, reading light novels, and watching Virtual YouTubers streamings. I love the ACGN culture, and my favorite VTuber is Oozora Subaru from hololive.</p>
             <h3 class="enw2" id="education">Education</h3>
-                <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=en" target="_blank">
             <div class="scrollitems">
+                <a class="item open-popup" href="#" data-name="edu_utaipei" data-lang="en">
                     <picture>
                         <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
                         <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
