--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <p class="zhw">興趣有彈鋼琴、打羽球、聽音樂、看動漫、看輕小說、看 VTuber 直播，喜歡日本二次元文化，VTuber 主推 hololive 的大空スバル。</p>
             
             <h3 class="zhw" id="education">學歷</h3>
-                <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=zh-tw" target="_blank">
             <div class="scrollitems">
+                <a class="item open-popup" href="#" data-name="edu_utaipei" data-lang="tw">
                     <picture>
                         <source srcset="/pictures/profile_use/education/utaipei_seal.webp" type="image/webp">
                         <source srcset="/pictures/profile_use/education/utaipei_seal.png" type="image/png">
