feat: update experience info at 童訊

--- a/en/index.html
+++ b/en/index.html
@@ -123,7 +123,7 @@
                         <img src="/pictures/profile_use/experience/tonghsun.png" alt="Trademark of 童訊科技股份有限公司">
                     </picture>
                     <p class="title enw2">童訊科技股份有限公司</p>
-                    <p class="time enw2">Sep 2024 - Present</p>
+                    <p class="time enw2">Sep 2024 - Aug 2025</p>
                 </a>
             </div>
 
