--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <img src="/pictures/profile_use/experience/tonghsun.png" alt="童訊科技股份有限公司商標" width="144" height="144">
                     </picture>
                     <p class="title zhw">童訊科技股份有限公司</p>
-                    <p class="time zhw">Sep 2024 - Present</p>
+                    <p class="time zhw">Sep 2024 - Aug 2025</p>
                 </a>
             </div>
             
