--- a/sections/en/exp_tonghsun.html
+++ b/sections/en/exp_tonghsun.html
@@ -12,7 +12,7 @@
         <div class="timeline-content">
             <span class="title enw1">Part-time Teacher - Children's Block-Based Programming Course</span>
             <br>
-            <span class="time">Mar 2025 - Present</span>
+            <span class="time">Mar 2025 - Aug 2025</span>
         </div>
     </li>
     <li>
@@ -23,7 +23,7 @@
         <div class="timeline-content">
             <span class="title enw1">Part-time Teaching Assistant - Children's Block-Based Programming Course</span>
             <br>
-            <span class="time">Sep 2024 - Present</span>
+            <span class="time">Sep 2024 - Aug 2025</span>
         </div>
     </li>
 </ul>
