--- a/sections/tw/exp_tonghsun.html
+++ b/sections/tw/exp_tonghsun.html
@@ -12,7 +12,7 @@
         <div class="timeline-content">
             <span class="title">兼職兒童積木程式課程講師</span>
             <br>
-            <span class="time">Mar 2025 - Present</span>
+            <span class="time">Mar 2025 - Aug 2025</span>
         </div>
     </li>
     <li>
@@ -23,7 +23,7 @@
         <div class="timeline-content">
             <span class="title">兼職兒童積木程式課程助教</span>
             <br>
-            <span class="time">Sep 2024 - Present</span>
+            <span class="time">Sep 2024 - Aug 2025</span>
         </div>
     </li>
 </ul>
