feat: update experience
competitions and conferences

--- a/en/index.html
+++ b/en/index.html
@@ -227,6 +227,33 @@
                 <summary class="enw1">2025</summary>
                 <ul>
                     <li>
+                        <span class="title enw1">Collegiate Programming Examination</span>
+                        <br>
+                        <span class="description enw2">Association of Taiwan Computer Programming Contest</span>
+                        <br>
+                        <span class="description enw2">44th / 2377 (Solved: 5 / 7)</span>
+                        <br>
+                        <span class="time enw2">Dec 09, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">2025 Schoolwide Programming Contest</span>
+                        <br>
+                        <span class="description enw2">Department of Computer Science, University of Taipei</span>
+                        <br>
+                        <span class="description enw2">Excellence Award, 3rd</span>
+                        <br>
+                        <span class="time enw2">Nov 18, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title enw1">2025 Fall CodeFast Taipei - TaipeiPASS Micro-service Hackathon</span>
+                        <br>
+                        <span class="description enw2">Department of Information Technology, Taipei City Government</span>
+                        <br>
+                        <span class="description enw2">Preliminary</span>
+                        <br>
+                        <span class="time enw2">Nov 08 - 09, 2025</span>
+                    </li>
+                    <li>
                         <span class="title enw1">2025 National Collegiate Programming Contest</span>
                         <br>
                         <span class="description enw2">National Sun Yat-sen University</span>
@@ -301,7 +328,7 @@
                         <br>
                         <span class="description enw2">8th</span>
                         <br>
-                        <span class="time enw2">Nov 17, 2024</span>
+                        <span class="time enw2">Nov 12, 2024</span>
                     </li>
                     <li>
                         <span class="title enw1">Collegiate Programming Examination</span>
@@ -368,6 +395,15 @@
                 <summary class="enw1">2025</summary>
                 <ul>
                     <li>
+                        <span class="title enw1">IET ICETA 2025</span>
+                        <br>
+                        <span class="description enw2">National Taipei University of Business</span>
+                        <br>
+                        <span class="description enw2">Staff Member</span>
+                        <br>
+                        <span class="time enw2">Oct 24 - 26, 2025</span>
+                    </li>
+                    <li>
                         <span class="title enw1">COSCUP x RubyConf Taiwan 2025</span>
                         <br>
                         <span class="description enw2">COSCUP</span>
@@ -381,7 +417,7 @@
                         <br>
                         <span class="description enw2">Sina Smart Computing Institute</span>
                         <br>
-                        <span class="description enw2">Staff</span>
+                        <span class="description enw2">Staff Member</span>
                         <br>
                         <span class="time enw2">Jul 15 - 17, 2025</span>
                     </li>
