--- a/index.html
+++ b/index.html
@@ -225,6 +225,33 @@
                 <summary class="zhwb">2025</summary>
                 <ul>
                     <li>
+                        <span class="title zhwb">大學程式能力檢定 (CPE)</span>
+                        <br>
+                        <span class="description zhw">臺灣程式競賽暨檢定學會</span>
+                        <br>
+                        <span class="description zhw">44th / 2377 (Solved: 5 / 7)</span>
+                        <br>
+                        <span class="time zhw">Dec 09, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">臺北市立大學資訊科學系 114 學年度第 1 學期全校程式設計實作競賽</span>
+                        <br>
+                        <span class="description zhw">臺北市立大學資訊科學系</span>
+                        <br>
+                        <span class="description zhw">優等, 第 3 名</span>
+                        <br>
+                        <span class="time zhw">Nov 18, 2025</span>
+                    </li>
+                    <li>
+                        <span class="title zhwb">2025 臺北秋季程式設計節 - 城市通微服務大黑客松</span>
+                        <br>
+                        <span class="description zhw">臺北市政府資訊局</span>
+                        <br>
+                        <span class="description zhw">初選</span>
+                        <br>
+                        <span class="time zhw">Nov 08 - 09, 2025</span>
+                    </li>
+                    <li>
                         <span class="title zhwb">114 年度全國大專校院電腦軟體設計競賽</span>
                         <br>
                         <span class="description zhw">國立中山大學</span>
@@ -315,7 +342,7 @@
                         <br>
                         <span class="description zhw">臺北市立大學資訊科學系</span>
                         <br>
-                        <span class="description zhw">入圍（第 8 名）</span>
+                        <span class="description zhw">入圍, 第 8 名</span>
                         <br>
                         <span class="time zhw">Nov 12, 2024</span>
                     </li>
@@ -433,6 +460,15 @@
             <details class="list" id="2025-conf" open>
                 <summary class="zhwb">2025</summary>
                 <ul>
+                    <li>
+                        <span class="title zhwb">IET ICETA 2025</span>
+                        <br>
+                        <span class="description zhw">國立臺北商業大學</span>
+                        <br>
+                        <span class="description zhw">工作人員</span>
+                        <br>
+                        <span class="time zhw">Oct 24 - 26, 2025</span>
+                    </li>
                     <li>
                         <span class="title zhwb">COSCUP x RubyConf Taiwan 2025</span>
                         <br>
