feat: new projects
Jo Exercise, UtaipeiEat, and Type Million Time

--- a/en/projects/index.html
+++ b/en/projects/index.html
@@ -77,6 +77,50 @@
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
         <div id="projectc">
+            <a href="https://blueboy247.github.io/typing-million-time/v100/" target="_blank" class="problock course">
+                <div class="proimage">
+                    <img src="/pictures/project_use/TypeMillionTime.png" alt="Type Million Time" title="Type Million Time">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle enw2">Type Million Time</p>
+                    <p class="protime enw2">Dec 2025 - Dec 2025</p>
+                    <div class="protag enw2">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <p class="probrief enw2">Type Million Time is an engaging online typing game designed for both beginners and seasoned typists. With two exciting modes—Key Response to master keyboard layout and Text Follow to sharpen real typing skills—players can improve while having fun. The built-in achievement system keeps motivation high, ensuring that even expert typists stay challenged and entertained. This is the outcome of the course <em>Introduction of Digital Technology</em>, developed collaboratively with Eva Chen and Zoey Wang.</p>
+                </div>
+            </a>
+            <a href="https://github.com/BlueBoy247/UtaipeiEat" target="_blank" class="problock personal course">
+                <div class="proimage">
+                    <img src="/pictures/project_use/UtaipeiEat.png" alt="UtaipeiEat" title="UtaipeiEat">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle enw2">UtaipeiEat</p>
+                    <p class="protime enw2">Nov 2025 - Dec 2025</p>
+                    <div class="protag enw2">
+                        <span>Kotlin</span>
+                        <span>Firebase</span>
+                        <span>Android</span>
+                    </div>
+                    <p class="probrief enw2">UtaipeiEat is a campus student cafeteria ordering platform that provides students, faculty, and cafeteria vendors with a convenient channel for placing orders. The system has two main roles: customers (students/faculty) and vendors. Customers can place orders and track their order status through the app, while vendors can manage incoming orders. This is the outcome of the course <em>Developing Android App and Social Media Applications</em>.</p>
+                </div>
+            </a>
+            <a href="https://github.com/Jeff92316046/jo-exercise" target="_blank" class="problock competition">
+                <div class="proimage">
+                    <img src="/pictures/project_use/JoExercise.png" alt="Jo Exercise" title="Jo Exercise">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle enw2">Jo Exercise</p>
+                    <p class="protime enw2">Nov 2025 - Nov 2025</p>
+                    <div class="protag enw2">
+                        <span>Python</span>
+                        <span>FastAPI</span>
+                    </div>
+                    <p class="probrief enw2">Jo Exercise is a microservice designed for the TownPass Service in Taipei, providing a platform for citizens to organize group exercise activities. Users can create events to be held at any venue in any Taipei Sports Center, as well as join existing events. The platform also offers real-time messaging for each group activity, facilitating communication among participants. This project is the work of the team “還真是高高在上啊” (Members: Anorak, BlueBoy, ErEr, ayuki, n1ght0w1) for the 2025 Fall CodeFast Taipei - TaipeiPASS Micro-service Hackathon. In the team, I was mainly responsible for API design and development.</p>
+                </div>
+            </a>
             <a href="https://carbon-diary.utaipei.edu.tw/" target="_blank" class="problock utsys">
                 <div class="proimage">
                     <img src="/pictures/project_use/utsys-carbondiary.png" alt="UTaipei Carbon Diary System" title="UTaipei Carbon Diary System">
