--- a/projects/index.html
+++ b/projects/index.html
@@ -78,6 +78,50 @@
             <script src="/scripts/subnav.js" type="text/javascript" defer></script>
         </div>
         <div id="projectc">
+            <a href="https://blueboy247.github.io/typing-million-time/v100/" target="_blank" class="problock course">
+                <div class="proimage">
+                    <img src="/pictures/project_use/TypeMillionTime.png" alt="Type Million Time" title="Type Million Time">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">Type Million Time</p>
+                    <p class="protime zhw">Dec 2025 - Dec 2025</p>
+                    <div class="protag zhw">
+                        <span>HTML</span>
+                        <span>CSS</span>
+                        <span>JavaScript</span>
+                    </div>
+                    <p class="probrief zhw">Type Million Time 是一款線上打字練習遊戲，無論是打字初學者或是打字高手，皆可於此遊戲中找到樂趣。此遊戲分為兩種玩法：鍵位反應及文本跟打，玩家可透過鍵位反應來熟悉打字的鍵位，熟悉之後透過文本跟打來強化實際打字時的手感。此外，本遊戲亦提供成就系統，為玩家在練習打字的過程增添信心，即便打字能力已經成熟，遊玩的過程也不會感到無聊。為臺北市立大學學習與媒材設計學系「數位科技概論」課程之成果，與 Eva Chen 、 Zoey Wang 共同開發。</p>
+                </div>
+            </a>
+            <a href="https://github.com/BlueBoy247/UtaipeiEat" target="_blank" class="problock personal course">
+                <div class="proimage">
+                    <img src="/pictures/project_use/UtaipeiEat.png" alt="UtaipeiEat" title="UtaipeiEat">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">UtaipeiEat</p>
+                    <p class="protime zhw">Nov 2025 - Dec 2025</p>
+                    <div class="protag zhw">
+                        <span>Kotlin</span>
+                        <span>Firebase</span>
+                        <span>Android</span>
+                    </div>
+                    <p class="probrief zhw">UtaipeiEat 是一個校園學餐訂餐平台，提供學生、教職員與學生餐廳商家一個便利的訂餐服務管道。系統分為兩大角色：客戶（學生/教職員）與商家，客戶可透過此 APP 進行下單及追蹤訂單狀態，商家則可管理訂單。為臺北市立大學資訊科學系「Android應用程式專案開發與社群媒體應用」課程之成果。</p>
+                </div>
+            </a>
+            <a href="https://github.com/Jeff92316046/jo-exercise" target="_blank" class="problock competition">
+                <div class="proimage">
+                    <img src="/pictures/project_use/JoExercise.png" alt="Jo Exercise" title="Jo Exercise">
+                </div>
+                <div class="prodetails">
+                    <p class="protitle zhwb">Jo Exercise</p>
+                    <p class="protime zhw">Nov 2025 - Nov 2025</p>
+                    <div class="protag zhw">
+                        <span>Python</span>
+                        <span>FastAPI</span>
+                    </div>
+                    <p class="probrief zhw">Jo Exercise 是一個針對臺北市城市通所設計的一款微服務，提供一個平台讓市民能夠揪團運動。使用者可在平台發起在市內運動中心場地進行的活動，也可以參與活動，本平台更為每場揪團提供即時通訊服務，方便參與者間進一步聯繫。為 2025 臺北秋季程式設計節 - 城市通微服務大黑客松「還真是高高在上啊」團隊（成員： Anorak 、 BlueBoy 、 ErEr 、 ayuki 、 n1ght0w1）之作品，我在團隊中主要負責 API 的設計與開發。</p>
+                </div>
+            </a>
             <a href="https://carbon-diary.utaipei.edu.tw/" target="_blank" class="problock utsys">
                 <div class="proimage">
                     <img src="/pictures/project_use/utsys-carbondiary.png" alt="臺北市立大學 Carbon Diary 學生減碳系統" title="臺北市立大學 Carbon Diary 學生減碳系統">
